<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.notes.NoteAddFragment"
    android:padding="@dimen/note_item_padding">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/label_title"
        android:paddingBottom="@dimen/normal_padding">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_field_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_title"
        app:layout_constraintTop_toBottomOf="@id/label_id"
        android:paddingBottom="@dimen/normal_padding">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_field_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_description"
        app:layout_constraintTop_toBottomOf="@id/label_title"
        android:paddingBottom="@dimen/normal_padding">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_field_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/label_description"
        android:background="@android:color/darker_gray"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_tag_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_tag_id"
        app:layout_constraintTop_toBottomOf="@id/separator"
        android:paddingTop="@dimen/normal_padding"
        android:paddingBottom="@dimen/normal_padding">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_field_tag_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_tag_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_tag_title"
        app:layout_constraintTop_toBottomOf="@id/label_tag_id"
        android:paddingBottom="@dimen/normal_padding">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_field_tag_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="@dimen/bth_height"
        app:layout_constraintTop_toBottomOf="@id/label_tag_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel"
        android:text="@string/btn_save_note"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/bth_height"
        app:layout_constraintTop_toBottomOf="@id/label_tag_title"
        app:layout_constraintStart_toEndOf="@id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/btn_cancel_save"/>
</androidx.constraintlayout.widget.ConstraintLayout>